infra/gitops/03-services/blog-frontend-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-web
  labels:
    app: blog-frontend-web
spec:
  type: ClusterIP
  selector:
    app: blog-frontend-web
  ports:
    - name: http
      port: 80
      targetPort: http
